--- a/src/core/settings/lang/fa.json
+++ b/src/core/settings/lang/fa.json
@@ -2,9 +2,8 @@
     "about": "درباره",
 	"appready": "آماده استفاده",
 	"cannotsyncoffline": "امکان همسان‌سازی در حالت آفلاین وجود ندارد. لطفا به اینترنت متصل شوید.",
-    "cacheexpirationtime": "زمان اعتبار کشها (miliseconds)",
-    "configuringnotifications": "شما در حال پیکربندی اطلاعیه‌های «{{$a}}» هستید.",
 	"cannotsyncwithoutwifi": "امکان همسان‌سازی وجود ندارد. تنظیمات فعلی امکان همسان‌سازی از طریق اینترنت سیم کارت را نمیدهد. لطفا به شبکه وای‌فای متصل شوید.",
+    "compilationtime": "زمان کامپایل شدن نرم‌افزار",
     "cordovadevicemodel": "مدل دستگاه کُردوا",
 	"cordovadeviceosversion": "ورژن کردوا سیستم عامل",
 	"cordovadeviceplatform": "پلتفرم دستگاه",
