--- a/www/assets/lang/fa.json
+++ b/www/assets/lang/fa.json
@@ -1286,10 +1286,9 @@
     "core.serverconnection": "خطا هنگام ارتباط با سایت",
     "core.settings.about": "درباره",
     "core.settings.appready": "آماده استفاده",
-    "core.settings.cacheexpirationtime": "زمان اعتبار کشها (miliseconds)",
     "core.settings.cannotsyncoffline": "امکان همسان‌سازی در حالت آفلاین وجود ندارد. لطفا به اینترنت متصل شوید.",
     "core.settings.cannotsyncwithoutwifi": "امکان همسان‌سازی وجود ندارد. تنظیمات فعلی امکان همسان‌سازی از طریق اینترنت سیم کارت را نمیدهد. لطفا به شبکه وای‌فای متصل شوید.",
-    "core.settings.configuringnotifications": "شما در حال پیکربندی اطلاعیه‌های «{{$a}}» هستید.",
+    "core.settings.compilationtime": "زمان کامپایل شدن نرم‌افزار",
     "core.settings.cordovadevicemodel": "مدل دستگاه کُردوا",
     "core.settings.cordovadeviceosversion": "ورژن کردوا سیستم عامل",
     "core.settings.cordovadeviceplatform": "پلتفرم دستگاه",
