fa correction - About page correction

--- a/src/addon/notifications/lang/fa.json
+++ b/src/addon/notifications/lang/fa.json
@@ -1,5 +1,6 @@
 {
     "errorgetnotifications": "هنگام دریافت اعلانات خطا رخ داده است.",
+	"markallread": "علامت زدن همه بعنوان خوانده‌شده",
 	"notificationpreferences": "تنظیمات اعلانات",
     "notifications": "اعلانات",
 	"playsound": "آلارم صوتی",
