--- a/platforms/ios/www/assets/lang/fa.json
+++ b/platforms/ios/www/assets/lang/fa.json
@@ -657,6 +657,7 @@
     "addon.notes.publishstate": "دامنه",
     "addon.notes.sitenotes": "یادداشت‌های سایت",
     "addon.notifications.errorgetnotifications": "هنگام دریافت اعلانات خطا رخ داده است.",
+    "addon.notifications.markallread": "علامت زدن همه بعنوان خوانده‌شده",
     "addon.notifications.notificationpreferences": "تنظیمات اعلانات",
     "addon.notifications.notifications": "اعلانات",
     "addon.notifications.playsound": "آلارم صوتی",
