--- a/src/assets/lang/fa.json
+++ b/src/assets/lang/fa.json
@@ -1088,17 +1088,18 @@
     "core.fulllistofcourses": "همهٔ درس‌ها",
     "core.fullnameandsitename": "{{fullname}} ({{sitename}})",
     "core.grades.average": "میانگین",
+    "core.grades.badgrade": "نمره ارسال شده نامعتبر است.",
     "core.grades.contributiontocoursetotal": "میزان تاثیر در نمره نهایی درس",
     "core.grades.feedback": "بازخورد",
     "core.grades.grade": "نمره",
     "core.grades.gradeitem": "عنوان دوره",
     "core.grades.grades": "نمره‌ها",
-    "core.grades.itemname": "نام مورد",
     "core.grades.lettergrade": "نمرهٔ حرفی",
+    "core.grades.nogradesreturned": "نمره‌ای وجود ندارد.",
+    "core.grades.nooutcome": "بدون نتیجه",
     "core.grades.percentage": "درصد",
     "core.grades.range": "محدوده",
     "core.grades.rank": "رتبه",
-    "core.grades.viewgrades": "مشاهدهٔ نمره‌ها",
     "core.grades.weight": "وزن",
     "core.groupsseparate": "گروه‌های جداگانه",
     "core.groupsvisible": "گروه‌های مرئی",
