--- a/src/core/grades/lang/fa.json
+++ b/src/core/grades/lang/fa.json
@@ -1,15 +1,16 @@
 {
     "average": "میانگین",
+	"badgrade": "نمره ارسال شده نامعتبر است.",
     "contributiontocoursetotal": "میزان تاثیر در نمره نهایی درس",
     "feedback": "بازخورد",
     "grade": "نمره",
 	"gradeitem": "عنوان دوره",
     "grades": "نمره‌ها",
-    "itemname": "نام مورد",
     "lettergrade": "نمرهٔ حرفی",
+	"nogradesreturned": "نمره‌ای وجود ندارد.",
+	"nooutcome": "بدون نتیجه",
     "percentage": "درصد",
     "range": "محدوده",
     "rank": "رتبه",
-    "viewgrades": "مشاهدهٔ نمره‌ها",
     "weight": "وزن"
 }
