Several fa corrections by Gulp

--- a/src/addon/competency/lang/fa.json
+++ b/src/addon/competency/lang/fa.json
@@ -20,6 +20,7 @@
     "learningplancompetencies": "شایستگی‌های برنامه یادگیری",
     "learningplans": "برنامه‌های آزموشی",
     "myplans": "برنامه‌های یادگیری من",
+	"nocompetencies": "فاقد شایستگی",
     "nocrossreferencedcompetencies": "هیچ شایستگی دیگری به این شایستگی به‌طور متقابل ارجاع داده نشده است.",
     "noevidence": "بدون مدرک",
     "noplanswerecreated": "هیچ برنامهٔ یادگیری‌ای ساخته نشده است.",
