--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -1273,10 +1273,10 @@
     "core.login.auth_email": "Email-based self-registration",
     "core.login.authenticating": "Authenticating",
     "core.login.cancel": "Cancel",
-    "core.login.checksiteversion": "Check that your site uses Moodle 2.4 or later.",
+    "core.login.checksiteversion": "Check that your site uses software version 2.4 or later.",
     "core.login.confirmdeletesite": "Are you sure you want to delete the site {{sitename}}?",
     "core.login.connect": "Connect!",
-    "core.login.connecttomoodle": "Connect to Moodle",
+    "core.login.connecttomoodle": "Connect to Site",
     "core.login.contactyouradministrator": "Contact your site administrator for further help.",
     "core.login.contactyouradministratorissue": "Please, ask the administrator to check the following issue: {{$a}}",
     "core.login.createaccount": "Create my new account",
@@ -1297,7 +1297,7 @@
     "core.login.invalidaccount": "Please check your login details or ask your site administrator to check the site configuration.",
     "core.login.invaliddate": "Invalid date",
     "core.login.invalidemail": "Invalid email address",
-    "core.login.invalidmoodleversion": "Invalid Moodle version. The minium version required is 2.4.",
+    "core.login.invalidmoodleversion": "Invalid server software version. The minium version required is 2.4.",
     "core.login.invalidsite": "The site URL is invalid.",
     "core.login.invalidtime": "Invalid time",
     "core.login.invalidurl": "Invalid URL specified",
@@ -1316,7 +1316,7 @@
     "core.login.missinglastname": "Missing surname",
     "core.login.mobileservicesnotenabled": "Mobile Services are not enabled in your site. Please, contact your Moodle site administrator if you think mobile access should be enabled.",
     "core.login.newaccount": "New account",
-    "core.login.newsitedescription": "Please enter the URL of your Moodle site. Note that it might not be configured to work with this app.",
+    "core.login.newsitedescription": "Please enter the URL of MAGFA E-Learning Site.",
     "core.login.notloggedin": "You need to be logged in.",
     "core.login.password": "Password",
     "core.login.passwordforgotten": "Forgotten password",
@@ -1345,7 +1345,7 @@
     "core.login.siteinmaintenance": "Your site is in maintenance mode",
     "core.login.sitepolicynotagreederror": "Site policy not agreed.",
     "core.login.siteurl": "Site URL",
-    "core.login.siteurlrequired": "Site URL required, i.e <i>http://www.yourmoodlesite.abc or https://www.yourmoodlesite.efg</i>",
+    "core.login.siteurlrequired": "Site URL required, i.e <i>https://lms.magfalms.net</i>",
     "core.login.startsignup": "Create new account",
     "core.login.stillcantconnect": "Still can't connect?",
     "core.login.supplyinfo": "More details",
@@ -1354,7 +1354,7 @@
     "core.login.usernamerequired": "Username required",
     "core.login.usernotaddederror": "User not added - error",
     "core.login.visitchangepassword": "Do you want to visit the site to change the password?",
-    "core.login.webservicesnotenabled": "Web Services are not enabled in your site. Please, contact your Moodle site administrator if you think mobile access should be enabled.",
+    "core.login.webservicesnotenabled": "Web Services are not enabled in your site. Please, contact the site administrator if you think mobile access should be enabled.",
     "core.lostconnection": "Your authentication token is invalid or has expired, you will have to reconnect to the site.",
     "core.mainmenu.appsettings": "App settings",
     "core.mainmenu.changesite": "Change site",
