--- a/src/assets/lang/fa.json
+++ b/src/assets/lang/fa.json
@@ -49,6 +49,7 @@
     "addon.competency.learningplancompetencies": "شایستگی‌های برنامه یادگیری",
     "addon.competency.learningplans": "برنامه‌های آزموشی",
     "addon.competency.myplans": "برنامه‌های یادگیری من",
+    "addon.competency.nocompetencies": "فاقد شایستگی",
     "addon.competency.nocrossreferencedcompetencies": "هیچ شایستگی دیگری به این شایستگی به‌طور متقابل ارجاع داده نشده است.",
     "addon.competency.noevidence": "بدون مدرک",
     "addon.competency.noplanswerecreated": "هیچ برنامهٔ یادگیری‌ای ساخته نشده است.",
@@ -961,7 +962,11 @@
     "core.continue": "ادامه",
     "core.copiedtoclipboard": "متن کپی شد",
     "core.course": "درس",
+    "core.course.activitydisabled": "این فعالیت در نرم‌افزار تلفن همراه غیرفعال شده است.",
+    "core.course.activitynotyetviewableremoteaddon": "پلاگین نصب‌شده روی سرور، پشتیبانی نمی‌شود.",
+    "core.course.activitynotyetviewablesiteupgradeneeded": "نرم‌افزار سرور بایستی بروزرسانی شود.",
     "core.course.allsections": "تمام درس‌ها/فصل‌ها",
+    "core.course.askadmintosupport": "با واحد پشتیبانی تماس بگیرید و اعلام نمایید که نیاز به استفاده از این فعالیت در نرم‌افزار تلفن همراه دارید.",
     "core.course.confirmdeletemodulefiles": "آیا مطمئنید که می‌خواهید فایل‌های این ماژول را پاک کنید؟",
     "core.course.confirmdownload": "شما در آستانهٔ دریافت {{size}} هستید. آیا مطمئنید که می‌خواهید ادامه دهید؟",
     "core.course.confirmdownloadunknownsize": "ما نتوانستیم حجم دریافت را محاسبه کنیم. آیا مطمئنید که می‌خواهید ادامه دهید؟",
@@ -971,7 +976,14 @@
     "core.course.couldnotloadsections": "درس‌ها/فصل‌ها نتوانستند بارگیری شوند. لطفا بعدا دوباره تلاش کنید.",
     "core.course.coursesummary": "خلاصه دوره",
     "core.course.downloadcourse": "دریافت دوره",
-    "core.course.hiddenfromstudents": "پنهان از شاگردان",
+    "core.course.errordownloadingcourse": "هنگام دریافت درس، خطا رخ داده است.",
+    "core.course.errordownloadingsection": "هنگام دریافت فصل، خطا رخ داده است.",
+    "core.course.errorgetmodule": "هنگام دریافت اطلاعات فعالیت، خطا رخ داده است.",
+    "core.course.hiddenfromstudents": "پنهان از فراگیران",
+    "core.course.hiddenoncoursepage": "وجود دارد اما در این صفحه نمایش داده نمی‌شود.",
+    "core.course.nocontentavailable": "درحال حاضر محتوایی برای نمایش وجود ندارد.",
+    "core.course.overriddennotice": "",
+    "core.course.refreshcourse": "بروزرسانی درس",
     "core.course.sections": "فصل‌ها",
     "core.course.useactivityonbrowser": "البته همچنان می‌توانید با استفاده از مرورگر دستگاه خود، از آن استفاده کنید.",
     "core.coursedetails": "جزئیات درس",
@@ -1122,8 +1134,10 @@
     "core.listsep": ",",
     "core.loading": "در حال دریافت اطلاعات",
     "core.loadmore": "دریافت اطلاعات بیشتر",
+    "core.login.auth_email": "ثبت‌نام خود با ارسال ایمیل",
     "core.login.authenticating": "در حال شناسایی",
     "core.login.cancel": "انصراف",
+    "core.login.checksiteversion": "بررسی ورژن نرم‌افزار سرور",
     "core.login.confirmdeletesite": "آیا مطمئن هستید که می‌خواهید سایت {{sitename}} را پاک کنید؟",
     "core.login.connect": "اتصال",
     "core.login.connecttomoodle": "اتصال به سایت",
@@ -1131,8 +1145,13 @@
     "core.login.contactyouradministratorissue": "از مدیر سایت بخواهید تا مشکل زیر را بررسی نماید:  {{$a}}",
     "core.login.createaccount": "ایجاد حساب کاربری من",
     "core.login.createuserandpass": "نام کاربری و رمز عبور خود را انتخاب کنید",
+    "core.login.credentialsdescription": "لطفا جهت ورود، نام کاربری و رمز ورود خود را وارد نمایید.",
     "core.login.emailconfirmsent": "<p>باید نامه‌ای به آدرس شما در <b>{{$a}}</b> فرستاده شده باشد</p>\n   <p>این نامه شامل دستورالعمل‌های ساده‌ای برای تکمیل عضویت شما است.</p>\n   <p>در صورت تداوم مواجهه با مشکل، با مدیر سایت تماس بگیرید.</p>",
+    "core.login.emailnotmatch": "ایمیل‌ها یکسان نیست",
     "core.login.enterthewordsabove": "کلمات بالا را وارد نمائید",
+    "core.login.erroraccesscontrolalloworigin": "اتصال به سایت‌های دیگر امکان‌پذیر نیست. ",
+    "core.login.errordeletesite": "هنگام حذف این سایت خطا رخ داده است. لطفا دوباره سعی کنید.",
+    "core.login.errorupdatesite": "هنگام بروزرسانی توکن سایت خطا رخ داده است.",
     "core.login.firsttime": "برای اولین بار به این صفحه آمده‌اید؟",
     "core.login.forgotten": "نام کاربری و یا رمز ورود خود را فراموش کرده‌اید؟",
     "core.login.getanothercaptcha": "دریافت یک کپچای دیگر",
@@ -1140,10 +1159,18 @@
     "core.login.helpmelogin": "<p dir=”auto”>این برنامه جهت اتصال به سایت یادگیری الکترونیکی شرکت مگفا می‌باشد.</br></br> اگر نمی‌توانید به این سایت وصل شوید، باید با مدیر سایت تماس بگیرید.</br></br>شماره تلفن: 88506090 و 88765470</p>",
     "core.login.instructions": "دستورالعمل",
     "core.login.invalidaccount": "لطفا اطلاعات ورودخود را بررسی نمایید",
+    "core.login.invaliddate": "تاریخ نامعتبر",
     "core.login.invalidemail": "آدرس پست الکترونیک نامعتبر",
     "core.login.invalidmoodleversion": "این نسخه از برنامه سایت قابلیت اتصال به موبایل ندارد",
     "core.login.invalidsite": "نشانی سایت معتبر نیست",
+    "core.login.invalidtime": "زمان نامعتبر",
     "core.login.invalidurl": "آدرس نامعتبر",
+    "core.login.invalidvaluemax": "حداکثر مقدار قابل قبول {{$a}} است.",
+    "core.login.invalidvaluemin": "حداقل مقدار قابل قبول {{$a}} است.",
+    "core.login.legacymoodleversion": "ورژن نرم‌افزار سرور پشتیبانی نمی‌شود.",
+    "core.login.legacymoodleversiondesktop": "شما درحال اتصال به <b>{{$a}}</b> هستید. <br><br> ورژن این سایت توسط این نرم‌افزار پشتیبانی نمی‌شود. <br><br>لطفا با واحد پشتیبانی تماس بگیرید. ",
+    "core.login.localmobileunexpectedresponse": "هنگام بررسی قابلیت‌های بیشتر نرم‌افزار خطا رخ داده است. شما از قابلیت‌های معمول نرم‌افزار استفاده خواهید کرد.",
+    "core.login.loggedoutssodescription": "شما بایستی مجددا وارد شوید. شما باید از طریق مرورگر به سایت وارد شوید.",
     "core.login.login": "ورود به سایت",
     "core.login.loginbutton": "ورود به سایت",
     "core.login.logininsiterequired": "لازم است به سایت از طریق مرورگر متصل گردید",
@@ -1154,10 +1181,11 @@
     "core.login.mobileservicesnotenabled": "سرویس دسترسی موبایل در سایت شما فعال نیست",
     "core.login.newaccount": "حساب کاربری جدید",
     "core.login.newsitedescription": "لطفا آدرس سایت آموزش الکترونیکی مگفا را وارد نمایید",
+    "core.login.notloggedin": "شما باید وارد سایت شوید.",
     "core.login.password": "رمز ورود",
     "core.login.passwordforgotten": "رمز ورود فراموش شده",
     "core.login.passwordforgotteninstructions2": "برای بازنشانی رمز ورودتان، نام کاربری یا آدرس پست الکترونیک خود را وارد نمائید. در صورتی که مشخصات ورودی شما در پایگاه داده پیدا شود، یک نامهٔ الکترونیکی شامل دستورالعمل‌هایی در مورد نحوه دسترسی دوباره به آدرس پست الکترونیک شما ارسال خواهد شد.",
-    "core.login.passwordrequired": "گذرواژه مورد نیاز است",
+    "core.login.passwordrequired": "رمز ورود الزامی است",
     "core.login.policyaccept": "موافقم و می‌پذیرم",
     "core.login.policyagree": "برای ادامهٔ استفاده از این سایت باید موافقت خود را با خط مشی آن اعلام کنید. آیا موافقید؟",
     "core.login.policyagreement": "موافقت با خط مشی سایت",
@@ -1165,11 +1193,21 @@
     "core.login.potentialidps": "ورود با استفاده از حساب شما روی:",
     "core.login.problemconnectingerror": "مشکل در برقراری ارتباط با سایت",
     "core.login.problemconnectingerrorcontinue": "لطفا بررسی نمایید که آدرس سایت صحیح باشد و مجددا تلاش کنید",
+    "core.login.profileinvaliddata": "مقدار نامعتبر",
+    "core.login.recaptchachallengeimage": "تصویر مجدد کپچا",
+    "core.login.recaptchaexpired": "اعتبارسنجی منقضی شد. لطفا مجددا به سوال امنیتی پاسخ دهید.",
+    "core.login.recaptchaincorrect": "پاسخ به سوال امنیتی صحیح نیست.",
+    "core.login.reconnect": "اتصال مجدد",
+    "core.login.reconnectdescription": "توکن شما نامعتبر یا منقضی گردیده است. شما بایستی مجددا به سایت متصل شوید.",
+    "core.login.reconnectssodescription": "توکن شما نامعتبر یا منقضی گردیده است. شما بایستی مجددا به سایت متصل شوید. شما بایستی از طریق مرورگر به سایت وارد شوید.",
+    "core.login.searchby": "جستجو توسط:",
     "core.login.security_question": "سؤال امنیتی",
     "core.login.selectacountry": "انتخاب کشور",
     "core.login.selectsite": "لطفا سایت را انتخاب نمایید",
+    "core.login.signupplugindisabled": "{{$a}} فعال نیست.",
     "core.login.siteaddress": "آدرس سایت",
     "core.login.siteinmaintenance": "سایت شما در حالت نگهداشت می باشد",
+    "core.login.sitepolicynotagreederror": "با خط‌مشی سایت موافقت نشده است.",
     "core.login.siteurl": "نشانی سایت",
     "core.login.siteurlrequired": "نشانی سایت لازم است. مثال: <i>http://lms.magfalms.net یا https://lms.magfalms.net</i>",
     "core.login.startsignup": "ایجاد حساب کاربری جدید",
@@ -1179,6 +1217,7 @@
     "core.login.usernameoremail": "نام کاربری یا آدرس پست الکترونیک را وارد کنید",
     "core.login.usernamerequired": "نام کاربر لازم است",
     "core.login.usernotaddederror": "کاربر اضافه نشد - خطا",
+    "core.login.visitchangepassword": "آیا مایل هستید جهت تغییر رمز ورود، به سایت مراجعه نمایید؟ ",
     "core.login.webservicesnotenabled": "وب سرویس سایت اشکال دارد.با مدیر سایت هماهنگ نمایید",
     "core.lostconnection": "اطلاعات توکن شناسایی شما معتبر نیست یا منقضی شده است. باید دوباره به سایت متصل شوید.",
     "core.mainmenu.appsettings": "تنظیمات برنامه",
@@ -1375,20 +1414,24 @@
     "core.user.country": "کشور",
     "core.user.description": "توضیح تکلیف",
     "core.user.details": "جزئیات",
+    "core.user.detailsnotavailable": "شما امکان مشاهده اطلاعات این کاربر را ندارید.",
+    "core.user.editingteacher": "استاد با امکان ویرایش",
     "core.user.email": "آدرس پست الکترونیک",
     "core.user.emailagain": "پست الکترونیک (دوباره)",
+    "core.user.errorloaduser": "هنگام دریافت اطلاعات کاربر خطا رخ داده است.",
     "core.user.firstname": "نام",
     "core.user.interests": "علایق",
-    "core.user.invaliduser": "کاربر نامعتبر",
     "core.user.lastname": "نام خانوادگی",
+    "core.user.manager": "مدیر",
     "core.user.newpicture": "عکس جدید",
     "core.user.noparticipants": "هیچ شرکت‌کننده‌ای پیدا نشد.",
     "core.user.participants": "شرکت کنندگان",
     "core.user.phone1": "تلفن",
     "core.user.phone2": "تلفن همراه",
     "core.user.roles": "نقش‌ها",
-    "core.user.student": "شاگرد",
-    "core.user.viewprofile": "مشاهدهٔ صفحهٔ مشخصات فردی",
+    "core.user.sendemail": "ارسال پست الکترونیک",
+    "core.user.student": "فراگیر",
+    "core.user.teacher": "استاد بدون امکان ویرایش",
     "core.user.webpage": "صفحهٔ وب",
     "core.userdeleted": "این حساب کاربری حذف شده است",
     "core.userdetails": "جزئیات حساب کاربری",
