--- a/src/core/login/lang/en.json
+++ b/src/core/login/lang/en.json
@@ -2,13 +2,13 @@
     "auth_email": "Email-based self-registration",
     "authenticating": "Authenticating",
     "cancel": "Cancel",
-    "checksiteversion": "Check that your site uses Moodle 2.4 or later.",
+    "checksiteversion": "Check that your site uses software version 2.4 or later.",
     "createaccount": "Create my new account",
     "createuserandpass": "Choose your username and password",
     "credentialsdescription": "Please provide your username and password to log in.",
     "confirmdeletesite": "Are you sure you want to delete the site {{sitename}}?",
     "connect": "Connect!",
-    "connecttomoodle": "Connect to Moodle",
+    "connecttomoodle": "Connect to Site",
     "contactyouradministrator": "Contact your site administrator for further help.",
     "contactyouradministratorissue": "Please, ask the administrator to check the following issue: {{$a}}",
     "emailconfirmsent": "<p>An email should have been sent to your address at <b>{{$a}}</b></p><p>It contains easy instructions to complete your registration.</p><p>If you continue to have difficulty, contact the site administrator.</p>",
@@ -26,7 +26,7 @@
     "invalidaccount": "Please check your login details or ask your site administrator to check the site configuration.",
     "invaliddate": "Invalid date",
     "invalidemail": "Invalid email address",
-    "invalidmoodleversion": "Invalid Moodle version. The minium version required is 2.4.",
+    "invalidmoodleversion": "Invalid server software version. The minium version required is 2.4.",
     "invalidsite": "The site URL is invalid.",
     "invalidtime": "Invalid time",
     "invalidurl": "Invalid URL specified",
@@ -45,7 +45,7 @@
     "missinglastname": "Missing surname",
     "mobileservicesnotenabled": "Mobile Services are not enabled in your site. Please, contact your Moodle site administrator if you think mobile access should be enabled.",
     "newaccount": "New account",
-    "newsitedescription": "Please enter the URL of your Moodle site. Note that it might not be configured to work with this app.",
+    "newsitedescription": "Please enter the URL of MAGFA E-Learning Site.",
     "notloggedin": "You need to be logged in.",
     "password": "Password",
     "passwordforgotten": "Forgotten password",
@@ -74,7 +74,7 @@
     "siteinmaintenance": "Your site is in maintenance mode",
     "sitepolicynotagreederror": "Site policy not agreed.",
     "siteurl": "Site URL",
-    "siteurlrequired": "Site URL required, i.e <i>http://www.yourmoodlesite.abc or https://www.yourmoodlesite.efg</i>",
+    "siteurlrequired": "Site URL required, i.e <i>https://lms.magfalms.net</i>",
     "startsignup": "Create new account",
     "stillcantconnect": "Still can't connect?",
     "supplyinfo": "More details",
@@ -83,5 +83,5 @@
     "usernamerequired": "Username required",
     "usernotaddederror": "User not added - error",
     "visitchangepassword": "Do you want to visit the site to change the password?",
-    "webservicesnotenabled": "Web Services are not enabled in your site. Please, contact your Moodle site administrator if you think mobile access should be enabled."
+    "webservicesnotenabled": "Web Services are not enabled in your site. Please, contact the site administrator if you think mobile access should be enabled."
 }
