--- a/src/core/login/lang/fa.json
+++ b/src/core/login/lang/fa.json
@@ -1,15 +1,22 @@
 {
-    "authenticating": "در حال شناسایی",
+    "auth_email": "ثبت‌نام خود با ارسال ایمیل",
+	"authenticating": "در حال شناسایی",
     "cancel": "انصراف",
+	"checksiteversion": "بررسی ورژن نرم‌افزار سرور",
+	"createaccount": "ایجاد حساب کاربری من",
+    "createuserandpass": "نام کاربری و رمز عبور خود را انتخاب کنید",
+	"credentialsdescription": "لطفا جهت ورود، نام کاربری و رمز ورود خود را وارد نمایید.",
     "confirmdeletesite": "آیا مطمئن هستید که می‌خواهید سایت {{sitename}} را پاک کنید؟",
     "connect": "اتصال",
     "connecttomoodle": "اتصال به سایت",
 	"contactyouradministrator": "برای دریافت راهنمایی بیشتر با مدیر سایت تماس بگیرید",
 	"contactyouradministratorissue": "از مدیر سایت بخواهید تا مشکل زیر را بررسی نماید:  {{$a}}",
-    "createaccount": "ایجاد حساب کاربری من",
-    "createuserandpass": "نام کاربری و رمز عبور خود را انتخاب کنید",
     "emailconfirmsent": "<p>باید نامه‌ای به آدرس شما در <b>{{$a}}</b> فرستاده شده باشد</p>\n   <p>این نامه شامل دستورالعمل‌های ساده‌ای برای تکمیل عضویت شما است.</p>\n   <p>در صورت تداوم مواجهه با مشکل، با مدیر سایت تماس بگیرید.</p>",
+	"emailnotmatch": "ایمیل‌ها یکسان نیست",
     "enterthewordsabove": "کلمات بالا را وارد نمائید",
+    "erroraccesscontrolalloworigin": "اتصال به سایت‌های دیگر امکان‌پذیر نیست. ",
+    "errordeletesite": "هنگام حذف این سایت خطا رخ داده است. لطفا دوباره سعی کنید.",
+    "errorupdatesite": "هنگام بروزرسانی توکن سایت خطا رخ داده است.",
     "firsttime": "برای اولین بار به این صفحه آمده‌اید؟",
     "forgotten": "نام کاربری و یا رمز ورود خود را فراموش کرده‌اید؟",
     "getanothercaptcha": "دریافت یک کپچای دیگر",
@@ -17,44 +24,64 @@
     "helpmelogin": "<p dir=”auto”>این برنامه جهت اتصال به سایت یادگیری الکترونیکی شرکت مگفا می‌باشد.</br></br> اگر نمی‌توانید به این سایت وصل شوید، باید با مدیر سایت تماس بگیرید.</br></br>شماره تلفن: 88506090 و 88765470</p>",
     "instructions": "دستورالعمل",
     "invalidaccount": "لطفا اطلاعات ورودخود را بررسی نمایید",
+	"invaliddate": "تاریخ نامعتبر",
     "invalidemail": "آدرس پست الکترونیک نامعتبر",
     "invalidmoodleversion": "این نسخه از برنامه سایت قابلیت اتصال به موبایل ندارد",
     "invalidsite": "نشانی سایت معتبر نیست",
+	"invalidtime": "زمان نامعتبر",
     "invalidurl": "آدرس نامعتبر",
+	"invalidvaluemax": "حداکثر مقدار قابل قبول {{$a}} است.",
+    "invalidvaluemin": "حداقل مقدار قابل قبول {{$a}} است.",
+    "legacymoodleversion": "ورژن نرم‌افزار سرور پشتیبانی نمی‌شود.",
+    "legacymoodleversiondesktop": "شما درحال اتصال به <b>{{$a}}</b> هستید. <br><br> ورژن این سایت توسط این نرم‌افزار پشتیبانی نمی‌شود. <br><br>لطفا با واحد پشتیبانی تماس بگیرید. ",
+    "localmobileunexpectedresponse": "هنگام بررسی قابلیت‌های بیشتر نرم‌افزار خطا رخ داده است. شما از قابلیت‌های معمول نرم‌افزار استفاده خواهید کرد.",
     "login": "ورود به سایت",
 	"loginbutton": "ورود به سایت",
     "logininsiterequired": "لازم است به سایت از طریق مرورگر متصل گردید",
     "loginsteps": "برای داشتن دسترسی کامل به این سایت، پیش از هر چیز باید یک حساب کاربری بسازید.",
+	"loggedoutssodescription": "شما بایستی مجددا وارد شوید. شما باید از طریق مرورگر به سایت وارد شوید.",
     "missingemail": "آدرس پست الکترونیک را وارد کنید",
     "missingfirstname": "نام را وارد کنید",
     "missinglastname": "نام خانوادگی را وارد کنید",
     "mobileservicesnotenabled": "سرویس دسترسی موبایل در سایت شما فعال نیست",
     "newaccount": "حساب کاربری جدید",
 	"newsitedescription": "لطفا آدرس سایت آموزش الکترونیکی مگفا را وارد نمایید",
-    "password": "رمز ورود",
+    "notloggedin": "شما باید وارد سایت شوید.",
+	"password": "رمز ورود",
     "passwordforgotten": "رمز ورود فراموش شده",
     "passwordforgotteninstructions2": "برای بازنشانی رمز ورودتان، نام کاربری یا آدرس پست الکترونیک خود را وارد نمائید. در صورتی که مشخصات ورودی شما در پایگاه داده پیدا شود، یک نامهٔ الکترونیکی شامل دستورالعمل‌هایی در مورد نحوه دسترسی دوباره به آدرس پست الکترونیک شما ارسال خواهد شد.",
-	"problemconnectingerror": "مشکل در برقراری ارتباط با سایت",
-	"problemconnectingerrorcontinue": "لطفا بررسی نمایید که آدرس سایت صحیح باشد و مجددا تلاش کنید",
-    "passwordrequired": "گذرواژه مورد نیاز است",
+	"passwordrequired": "رمز ورود الزامی است",
     "policyaccept": "موافقم و می‌پذیرم",
     "policyagree": "برای ادامهٔ استفاده از این سایت باید موافقت خود را با خط مشی آن اعلام کنید. آیا موافقید؟",
     "policyagreement": "موافقت با خط مشی سایت",
     "policyagreementclick": "مشاهدهٔ موافقت‌نامهٔ خط مشی سایت",
-    "potentialidps": "ورود با استفاده از حساب شما روی:",
+	"problemconnectingerror": "مشکل در برقراری ارتباط با سایت",
+	"problemconnectingerrorcontinue": "لطفا بررسی نمایید که آدرس سایت صحیح باشد و مجددا تلاش کنید",
+	"profileinvaliddata": "مقدار نامعتبر",
+	"potentialidps": "ورود با استفاده از حساب شما روی:",
+	"recaptchachallengeimage": "تصویر مجدد کپچا",
+    "recaptchaexpired": "اعتبارسنجی منقضی شد. لطفا مجددا به سوال امنیتی پاسخ دهید.",
+    "recaptchaincorrect": "پاسخ به سوال امنیتی صحیح نیست.",
+    "reconnect": "اتصال مجدد",
+    "reconnectdescription": "توکن شما نامعتبر یا منقضی گردیده است. شما بایستی مجددا به سایت متصل شوید.",
+    "reconnectssodescription": "توکن شما نامعتبر یا منقضی گردیده است. شما بایستی مجددا به سایت متصل شوید. شما بایستی از طریق مرورگر به سایت وارد شوید.",
+    "searchby": "جستجو توسط:",
     "security_question": "سؤال امنیتی",
     "selectacountry": "انتخاب کشور",
 	"selectsite": "لطفا سایت را انتخاب نمایید",
+	"signupplugindisabled": "{{$a}} فعال نیست.",
     "siteaddress": "آدرس سایت",
     "siteinmaintenance": "سایت شما در حالت نگهداشت می باشد",
+	"sitepolicynotagreederror": "با خط‌مشی سایت موافقت نشده است.",
     "siteurl": "نشانی سایت",
     "siteurlrequired": "نشانی سایت لازم است. مثال: <i>http://lms.magfalms.net یا https://lms.magfalms.net</i>",
+	"startsignup": "ایجاد حساب کاربری جدید",
 	"stillcantconnect": "همچنان نمی‌توانید به سایت متصل شوید؟",
-    "startsignup": "ایجاد حساب کاربری جدید",
     "supplyinfo": "جزئیات بیشتر",
     "username": "نام کاربری",
     "usernameoremail": "نام کاربری یا آدرس پست الکترونیک را وارد کنید",
     "usernamerequired": "نام کاربر لازم است",
     "usernotaddederror": "کاربر اضافه نشد - خطا",
+	"visitchangepassword": "آیا مایل هستید جهت تغییر رمز ورود، به سایت مراجعه نمایید؟ ",
     "webservicesnotenabled": "وب سرویس سایت اشکال دارد.با مدیر سایت هماهنگ نمایید"
 }
