--- a/src/core/user/lang/fa.json
+++ b/src/core/user/lang/fa.json
@@ -5,19 +5,23 @@
     "country": "کشور",
     "description": "توضیح تکلیف",
     "details": "جزئیات",
+	"detailsnotavailable": "شما امکان مشاهده اطلاعات این کاربر را ندارید.",
+    "editingteacher": "استاد با امکان ویرایش",
     "email": "آدرس پست الکترونیک",
     "emailagain": "پست الکترونیک (دوباره)",
+	"errorloaduser": "هنگام دریافت اطلاعات کاربر خطا رخ داده است.",
     "firstname": "نام",
     "interests": "علایق",
-    "invaliduser": "کاربر نامعتبر",
     "lastname": "نام خانوادگی",
+	"manager": "مدیر",
     "newpicture": "عکس جدید",
     "noparticipants": "هیچ شرکت‌کننده‌ای پیدا نشد.",
     "participants": "شرکت کنندگان",
     "phone1": "تلفن",
     "phone2": "تلفن همراه",
     "roles": "نقش‌ها",
-    "student": "شاگرد",
-    "viewprofile": "مشاهدهٔ صفحهٔ مشخصات فردی",
+	"sendemail": "ارسال پست الکترونیک",
+    "student": "فراگیر",
+	"teacher": "استاد بدون امکان ویرایش",
     "webpage": "صفحهٔ وب"
 }
