--- a/src/addon/mod/scorm/lang/fa.json
+++ b/src/addon/mod/scorm/lang/fa.json
@@ -34,8 +34,8 @@
     "lastattempt": "نمره آخرین آزمون",
     "mode": "حالت",
     "newattempt": "شروع یک تلاش جدید",
-    "noattemptsallowed": "تعداد مراجعات مجاز جهت مطالعه",
-    "noattemptsmade": "تعداد مراجعات جهت مطالعه",
+    "noattemptsallowed": "حداکثر تعداد دفعات دریافت درس",
+    "noattemptsmade": "تعداد دفعات دریافت درس",
     "normal": "معمولی",
     "notattempted": "شرکت صورت نگرفته است",
 	"offlineattemptnote": "اطلاعات این تلاش همسان‌سازی نشده است.",
