--- a/src/assets/lang/fa.json
+++ b/src/assets/lang/fa.json
@@ -572,8 +572,8 @@
     "addon.mod_scorm.lastattempt": "نمره آخرین آزمون",
     "addon.mod_scorm.mode": "حالت",
     "addon.mod_scorm.newattempt": "شروع یک تلاش جدید",
-    "addon.mod_scorm.noattemptsallowed": "تعداد مراجعات مجاز جهت مطالعه",
-    "addon.mod_scorm.noattemptsmade": "تعداد مراجعات جهت مطالعه",
+    "addon.mod_scorm.noattemptsallowed": "حداکثر تعداد دفعات دریافت درس",
+    "addon.mod_scorm.noattemptsmade": "تعداد دفعات دریافت درس",
     "addon.mod_scorm.normal": "معمولی",
     "addon.mod_scorm.notattempted": "شرکت صورت نگرفته است",
     "addon.mod_scorm.offlineattemptnote": "اطلاعات این تلاش همسان‌سازی نشده است.",
